[project]
name = "projectiii"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "GHCMaxim", email = "maxim080503@gmail.com" }
]
dependencies = [
    "sqlalchemy>=2.0.36",
    "fastapi>=0.115.2",
    "python-dotenv>=1.0.1",
    "psycopg>=3.2.3",
    "datetime>=5.5",
    "requests>=2.32.3",
    "beautifulsoup4>=4.12.3",
    "passlib>=1.7.4",
    "python-jose>=3.3.0",
    "argon2-cffi>=23.1.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/projectiii"]
